RESOLVED FIXED267936
Element::parserSetAttributes shouldn't trigger shadow tree construction in TextFieldInputType::attributeChanged
https://bugs.webkit.org/show_bug.cgi?id=267936
Summary Element::parserSetAttributes shouldn't trigger shadow tree construction in Te...
Ryosuke Niwa
Reported 2024-01-23 11:07:58 PST
We're always creating input element's shadow tree inside Element::parserSetAttributes because of this following code in TextFieldInputType: ``` void TextFieldInputType::attributeChanged(const QualifiedName& name) { if (name == valueAttr || name == placeholderAttr) { if (element()) updateInnerTextValue(); } InputType::attributeChanged(name); } ``` Don't do that.
Attachments
Ryosuke Niwa
Comment 1 2024-01-23 11:10:40 PST
EWS
Comment 2 2024-01-24 18:54:30 PST
Committed 273461@main (66bf68c9f459): <https://commits.webkit.org/273461@main> Reviewed commits have been landed. Closing PR #23111 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-01-24 18:55:25 PST
Note You need to log in before you can comment on or make changes to this bug.